--- a/node-api/package.json
+++ b/node-api/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.6.8",
     "mongoose-paginate": "^5.0.3",
+    "path": "^0.12.7",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
