--- a/node-api/package.json
+++ b/node-api/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.6.8",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.0",
     "path": "^0.12.7",
     "require-dir": "^1.2.0"
   },
