--- a/node-api/package.json
+++ b/node-api/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "mongoose": "^5.6.8",
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
